# claude-notify

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: code-reviewer.md
.claude/skills/add-backend/: SKILL.md
.claude/skills/dry-run/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/ai-specs/: design.md  implementation.md  plan.md
docs/ai-specs/notification/: design.md  implementation.md  plan.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/mute/: SKILL.md
plugin/skills/session/: SKILL.md
plugin/skills/setup-desktop/: SKILL.md
plugin/skills/setup-discord/: SKILL.md
plugin/skills/setup-email/: SKILL.md
plugin/skills/setup-ntfy/: SKILL.md
plugin/skills/setup-openclaw/: SKILL.md
plugin/skills/setup-pushbullet/: SKILL.md
plugin/skills/setup-slack/: SKILL.md
plugin/skills/setup-teams/: SKILL.md
plugin/skills/setup-telegram/: SKILL.md
plugin/skills/setup-webhook/: SKILL.md
plugin/skills/setup-whatsapp/: SKILL.md
plugin/skills/status/: SKILL.md
plugin/skills/unmute/: SKILL.md
plugin/skills/use/: SKILL.md
src/: config.rs  formatter.rs  main.rs  notifier.rs  setup.rs  types.rs
src/notifiers/: desktop.rs  discord.rs  email.rs  mod.rs  ntfy.rs  openclaw.rs  pushbullet.rs  slack.rs  teams.rs  telegram.rs  webhook.rs  whatsapp.rs
