[package]
name = "claude-notify"
version = "0.1.1"
edition = "2024"
description = "Notification bot for Claude Code hook events"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
